--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,8 +4,8 @@
 <head th:fragment="head">
 
     <!-- Bootstrap stylesheets and script -->
-    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
-    <link th:href="@{/css/techjobs.css}" rel="stylesheet" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/techjobs.css}">
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 
     <title th:text="'TechJobs' + ${title == null ? '' : ' :: ' + title}">TechJobs</title>
@@ -25,6 +25,26 @@
                 </ul>
             </div>
         </div>
+    </div>
+
+    <div th:fragment="job-listing" class="container body-content">
+
+        <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+
+
+
+        <table border="1" class="job-listing" th:block th:each="job : ${jobs}">
+
+            <tr><th>ID: </th><td th:text="${job.id}"></td></tr>
+            <tr><th>Name: </th><td th:text="${job.name}"></td></tr>
+            <tr><th>Employer: </th><td th:text="${job.employer}"></td></tr>
+            <tr><th>Location: </th><td th:text="${job.location}"></td></tr>
+            <tr><th>Position Type: </th><td th:text="${job.positionType}"></td></tr>
+            <tr><th>Skill: </th><td th:text="${job.coreCompetency}"></td></tr>
+
+        </table>
+        <!-- TODO #1 - Use a loop to display job results in a table. -->
+
     </div>
 
 </body>
